# TerminalGPT

./: .gitignore  .pylintrc  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  inject_token.sh  launch.json.template  makefile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: MainCD.yml  MainCI.yml  build.yml  cd.yml  ci.yml  github-actions-demo.yml  main.yml
terminalgpt/: api_key.py  chat.py  chat_utils.py  config.py  conversations.py  encryption.py  main.py  models.py  print_utils.py  printer.py
test_results/: test_results.xml
tests/: test_chat_utils.py  tests.py
tests/e2e/: test_load_e2e.py  test_new_e2e.py
tests/integration/: test_load_integration.py  test_new_integration.py
tests/unit/: mocks.py  test_chat.py  test_chat_utils.py  test_conversations.py  test_load_unit.py  test_print_utils.py  test_printer.py
