[tool.poetry]
name = "terminalgpt"
version = "1.1.0"
description = "AI chat asistent in your terminal powered by OpenAI GPT-3.5"
authors = ["Adam Yodinsky <27074934+adamyodinsky@users.noreply.github.com>"]
keywords=["ai", "chat", "terminal", "openai", "gpt3", "chatGPT", "assistant", "gpt3.5", "terminalGPT", "gpt-3.5-turbo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27.6"
tiktoken = ">=0.2,<0.4"
colorama = "^0.4.6"
cryptography = "^40.0.2"
click = "^8.1.3"
prompt-toolkit = "^3.0.38"
yaspin = "^2.3.0"
rich = "^13.3.5"
isort = "^5.12.0"
pytest = "^7.3.1"
pylint = "^2.17.4"

[tool.poetry.scripts]
terminalgpt = "terminalgpt.main:cli"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.2"
pylint = "^2.17.0"
pexpect = "^4.8.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
