[tool.poetry]
name = "terminalgpt"
version = "2.1.2"
description = "AI chat assistant in your terminal powered by OpenAI ChatGPT models."
authors = ["Adam Yodinsky <27074934+adamyodinsky@users.noreply.github.com>"]
keywords = [
  "ai",
  "chat",
  "terminal",
  "openai",
  "chatGPT",
  "terminalGPT",
  "assistant",
  "devops",
  "tool",
  "cli",
  "gpt",
  "gpt-3.5",
  "gpt-3.5-turbo",
  "gpt-3.5-turbo-16k",
  "gpt-4",
  "gpt-4-32k",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.2.0"
tiktoken = ">=0.2,<0.6"
colorama = "^0.4.6"
cryptography = ">=40.0.2,<42.0.0"
click = "^8.1.3"
prompt-toolkit = "^3.0.38"
yaspin = "^2.3.0"
rich = "^13.3.5"
isort = "^5.12.0"
pytest = "^7.3.1"
pylint = "^3.0.2"

[tool.poetry.scripts]
terminalgpt = "terminalgpt.main:cli"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.2"
pylint = "^3.0.2"
pexpect = "^4.8.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
